--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <section class="contanier">
     <div class="img-contanier">
-      <img src="images/illustration-hero.svg" />
+      <img src="images/illustration-hero.svg" alt="img" />
     </div>
     <div class="text-contanier">
       <div class="row1">
